{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 127,
  "lineage": "65ac83da-80ee-fc49-190b-36ee20e33c52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nemo_eks_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d9822ba224ea618",
            "association_id": "eipassoc-0625b5c7917290265",
            "domain": "vpc",
            "id": "eipalloc-02d9822ba224ea618",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04aba2330725975e9",
            "private_dns": "ip-10-110-1-47.ap-northeast-2.compute.internal",
            "private_ip": "10.110.1.47",
            "public_dns": "ec2-3-34-61-172.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.61.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nemo_eks_public_nat_gateway"
            },
            "tags_all": {
              "Name": "nemo_eks_public_nat_gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nemo_eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:internet-gateway/igw-0f61b322d3d70696a",
            "id": "igw-0f61b322d3d70696a",
            "owner_id": "774026503161",
            "tags": {
              "Name": "nemo_eks_igw"
            },
            "tags_all": {
              "Name": "nemo_eks_igw"
            },
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "dependencies": [
            "aws_vpc.nemo_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nemo_eks_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d9822ba224ea618",
            "connectivity_type": "public",
            "id": "nat-091f549b42fdff139",
            "network_interface_id": "eni-04aba2330725975e9",
            "private_ip": "10.110.1.47",
            "public_ip": "3.34.61.172",
            "subnet_id": "subnet-01c6c9cc4eff9b83e",
            "tags": {
              "Name": "nemo_eks_nat_gateway"
            },
            "tags_all": {
              "Name": "nemo_eks_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nemo_eks_eip",
            "aws_subnet.nemo_eks_public_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nemo_eks_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:route-table/rtb-0e1fe880042e3291b",
            "id": "rtb-0e1fe880042e3291b",
            "owner_id": "774026503161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091f549b42fdff139",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nemo_eks_private"
            },
            "tags_all": {
              "Name": "nemo_eks_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nemo_eks_eip",
            "aws_nat_gateway.nemo_eks_nat_gateway",
            "aws_subnet.nemo_eks_public_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nemo_eks_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:route-table/rtb-0a6d34f8d58157d0a",
            "id": "rtb-0a6d34f8d58157d0a",
            "owner_id": "774026503161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f61b322d3d70696a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nemo_eks_public"
            },
            "tags_all": {
              "Name": "nemo_eks_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nemo_eks_igw",
            "aws_vpc.nemo_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nemo_eks_trust_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:route-table/rtb-0f5d20d5c696801b8",
            "id": "rtb-0f5d20d5c696801b8",
            "owner_id": "774026503161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nemo_eks_trust"
            },
            "tags_all": {
              "Name": "nemo_eks_trust"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nemo_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nemo_eks_private_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07accfd3b7eba5ee8",
            "route_table_id": "rtb-0e1fe880042e3291b",
            "subnet_id": "subnet-0886879694cc3e8b8"
          },
          "dependencies": [
            "aws_eip.nemo_eks_eip",
            "aws_nat_gateway.nemo_eks_nat_gateway",
            "aws_route_table.nemo_eks_private_route",
            "aws_subnet.nemo_eks_private_subnet",
            "aws_subnet.nemo_eks_public_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082eea5a84bdf476f",
            "route_table_id": "rtb-0e1fe880042e3291b",
            "subnet_id": "subnet-08526d7787664c4a4"
          },
          "dependencies": [
            "aws_eip.nemo_eks_eip",
            "aws_nat_gateway.nemo_eks_nat_gateway",
            "aws_route_table.nemo_eks_private_route",
            "aws_subnet.nemo_eks_private_subnet",
            "aws_subnet.nemo_eks_public_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nemo_eks_public_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8f8df515f9b9f09",
            "route_table_id": "rtb-0a6d34f8d58157d0a",
            "subnet_id": "subnet-01c6c9cc4eff9b83e"
          },
          "dependencies": [
            "aws_internet_gateway.nemo_eks_igw",
            "aws_route_table.nemo_eks_public_route",
            "aws_subnet.nemo_eks_public_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08da50f628d5036da",
            "route_table_id": "rtb-0a6d34f8d58157d0a",
            "subnet_id": "subnet-0fcd1435bf9bbea35"
          },
          "dependencies": [
            "aws_internet_gateway.nemo_eks_igw",
            "aws_route_table.nemo_eks_public_route",
            "aws_subnet.nemo_eks_public_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nemo_eks_trust_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1aad9cefec85371",
            "route_table_id": "rtb-0f5d20d5c696801b8",
            "subnet_id": "subnet-06f275bd9e1612315"
          },
          "dependencies": [
            "aws_route_table.nemo_eks_trust_route",
            "aws_subnet.nemo_eks_trust_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009f69040d6526886",
            "route_table_id": "rtb-0f5d20d5c696801b8",
            "subnet_id": "subnet-083953452e472643c"
          },
          "dependencies": [
            "aws_route_table.nemo_eks_trust_route",
            "aws_subnet.nemo_eks_trust_subnet",
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nemo_eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:security-group/sg-08e8b73738ab48f0c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e8b73738ab48f0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.110.0.0/16"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nemo_eks_cluster",
            "name_prefix": "",
            "owner_id": "774026503161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nemo_eks_cluster"
            },
            "tags_all": {
              "Name": "nemo_eks_cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nemo_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nemo_eks_cluster_ingress_workstation_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.110.0.0/16"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1942902251",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08e8b73738ab48f0c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nemo_eks_cluster",
            "aws_vpc.nemo_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nemo_eks_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:subnet/subnet-0886879694cc3e8b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.110.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0886879694cc3e8b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774026503161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nemo_eks_private_a",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nemo_eks_private_a",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "dependencies": [
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:subnet/subnet-08526d7787664c4a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.110.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08526d7787664c4a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774026503161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nemo_eks_private_b",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nemo_eks_private_b",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "dependencies": [
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nemo_eks_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:subnet/subnet-01c6c9cc4eff9b83e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c6c9cc4eff9b83e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774026503161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nemo_eks_public_a",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nemo_eks_public_a",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "dependencies": [
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:subnet/subnet-0fcd1435bf9bbea35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.110.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcd1435bf9bbea35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774026503161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nemo_eks_public_b",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nemo_eks_public_b",
              "kubernetes.io/cluster/nemo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "dependencies": [
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nemo_eks_trust_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:subnet/subnet-06f275bd9e1612315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.110.111.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f275bd9e1612315",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774026503161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nemo_eks_trust_a",
              "kubernetes.io/cluster/nemo": "shared"
            },
            "tags_all": {
              "Name": "nemo_eks_trust_a",
              "kubernetes.io/cluster/nemo": "shared"
            },
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "dependencies": [
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:subnet/subnet-083953452e472643c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.110.112.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083953452e472643c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774026503161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nemo_eks_trust_b",
              "kubernetes.io/cluster/nemo": "shared"
            },
            "tags_all": {
              "Name": "nemo_eks_trust_b",
              "kubernetes.io/cluster/nemo": "shared"
            },
            "vpc_id": "vpc-0d05de52ce343fadd"
          },
          "dependencies": [
            "aws_vpc.nemo_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nemo_eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:774026503161:vpc/vpc-0d05de52ce343fadd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-04f67963191c85ce0",
            "default_route_table_id": "rtb-0de641c464abd7c4a",
            "default_security_group_id": "sg-097141edb66560d75",
            "dhcp_options_id": "dopt-0844f5733b8508dfb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d05de52ce343fadd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de641c464abd7c4a",
            "owner_id": "774026503161",
            "tags": {
              "Name": "nemo_eks_node",
              "kubernetes.io/cluster/nemo": "shared"
            },
            "tags_all": {
              "Name": "nemo_eks_node",
              "kubernetes.io/cluster/nemo": "shared"
            }
          }
        }
      ]
    }
  ]
}